traducPyAJava/traducPyJavaParser.py
# Generated from traducPyJava.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class traducPyJavaParser ( Parser ):

    grammarFileName = "traducPyJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'def'", "'return'", 
                     "'if'", "'else'", "'while'", "'for'", "'in'", "'print'", 
                     "'class'", "'import'", "'and'", "'or'", "'not'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'('", "')'", "'['", 
                     "']'", "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "WS", "DEF", "RETURN", "IF", 
                      "ELSE", "WHILE", "FOR", "IN", "PRINT", "CLASS", "IMPORT", 
                      "AND", "OR", "NOT", "ASSIGN", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COLON", 
                      "COMMA", "DOT", "IDENTIFIER", "INT", "FLOAT", "STRING", 
                      "COMMENT" ]

    RULE_programa = 0
    RULE_clase = 1
    RULE_funcion = 2
    RULE_bloque = 3
    RULE_declaracion = 4
    RULE_parametros = 5
    RULE_sentencia = 6
    RULE_if_statement = 7
    RULE_while_statement = 8
    RULE_for_statement = 9
    RULE_print_statement = 10
    RULE_return_statement = 11
    RULE_expresion = 12
    RULE_importacion = 13

    ruleNames =  [ "programa", "clase", "funcion", "bloque", "declaracion", 
                   "parametros", "sentencia", "if_statement", "while_statement", 
                   "for_statement", "print_statement", "return_statement", 
                   "expresion", "importacion" ]

    EOF = Token.EOF
    NEWLINE=1
    WS=2
    DEF=3
    RETURN=4
    IF=5
    ELSE=6
    WHILE=7
    FOR=8
    IN=9
    PRINT=10
    CLASS=11
    IMPORT=12
    AND=13
    OR=14
    NOT=15
    ASSIGN=16
    PLUS=17
    MINUS=18
    MULT=19
    DIV=20
    MOD=21
    EQ=22
    NEQ=23
    LT=24
    GT=25
    LEQ=26
    GEQ=27
    LPAREN=28
    RPAREN=29
    LBRACKET=30
    RBRACKET=31
    COLON=32
    COMMA=33
    DOT=34
    IDENTIFIER=35
    INT=36
    FLOAT=37
    STRING=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(traducPyJavaParser.EOF, 0)

        def importacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.ImportacionContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.ImportacionContext,i)


        def clase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.ClaseContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.ClaseContext,i)


        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.FuncionContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.FuncionContext,i)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.SentenciaContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(traducPyJavaParser.NEWLINE)
            else:
                return self.getToken(traducPyJavaParser.NEWLINE, i)

        def getRuleIndex(self):
            return traducPyJavaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = traducPyJavaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34359745976) != 0):
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [12]:
                    self.state = 28
                    self.importacion()
                    pass
                elif token in [11]:
                    self.state = 29
                    self.clase()
                    pass
                elif token in [3]:
                    self.state = 30
                    self.funcion()
                    pass
                elif token in [4, 5, 7, 8, 10, 35]:
                    self.state = 31
                    self.sentencia()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 37
                self.match(traducPyJavaParser.NEWLINE)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(traducPyJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(traducPyJavaParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(traducPyJavaParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(traducPyJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(traducPyJavaParser.NEWLINE, 0)

        def bloque(self):
            return self.getTypedRuleContext(traducPyJavaParser.BloqueContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_clase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClase" ):
                listener.enterClase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClase" ):
                listener.exitClase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClase" ):
                return visitor.visitClase(self)
            else:
                return visitor.visitChildren(self)




    def clase(self):

        localctx = traducPyJavaParser.ClaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_clase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(traducPyJavaParser.CLASS)
            self.state = 46
            self.match(traducPyJavaParser.IDENTIFIER)
            self.state = 47
            self.match(traducPyJavaParser.COLON)
            self.state = 48
            self.match(traducPyJavaParser.NEWLINE)
            self.state = 49
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(traducPyJavaParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(traducPyJavaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(traducPyJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(traducPyJavaParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(traducPyJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(traducPyJavaParser.NEWLINE, 0)

        def bloque(self):
            return self.getTypedRuleContext(traducPyJavaParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(traducPyJavaParser.ParametrosContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = traducPyJavaParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(traducPyJavaParser.DEF)
            self.state = 52
            self.match(traducPyJavaParser.IDENTIFIER)
            self.state = 53
            self.match(traducPyJavaParser.LPAREN)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515664543744) != 0):
                self.state = 54
                self.parametros()


            self.state = 57
            self.match(traducPyJavaParser.RPAREN)
            self.state = 58
            self.match(traducPyJavaParser.COLON)
            self.state = 59
            self.match(traducPyJavaParser.NEWLINE)
            self.state = 60
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.SentenciaContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(traducPyJavaParser.NEWLINE)
            else:
                return self.getToken(traducPyJavaParser.NEWLINE, i)

        def getRuleIndex(self):
            return traducPyJavaParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = traducPyJavaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 62
                    self.sentencia()
                    self.state = 64 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 63
                            self.match(traducPyJavaParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 66 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,4,self._ctx)


                else:
                    raise NoViableAltException(self)
                self.state = 70 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(traducPyJavaParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(traducPyJavaParser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = traducPyJavaParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(traducPyJavaParser.IDENTIFIER)
            self.state = 73
            self.match(traducPyJavaParser.ASSIGN)
            self.state = 74
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(traducPyJavaParser.COMMA)
            else:
                return self.getToken(traducPyJavaParser.COMMA, i)

        def getRuleIndex(self):
            return traducPyJavaParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = traducPyJavaParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.expresion(0)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 77
                self.match(traducPyJavaParser.COMMA)
                self.state = 78
                self.expresion(0)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(traducPyJavaParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(traducPyJavaParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(traducPyJavaParser.For_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(traducPyJavaParser.Print_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(traducPyJavaParser.Return_statementContext,0)


        def declaracion(self):
            return self.getTypedRuleContext(traducPyJavaParser.DeclaracionContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = traducPyJavaParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sentencia)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.if_statement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.while_statement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.for_statement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.print_statement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.return_statement()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.declaracion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(traducPyJavaParser.IF, 0)

        def expresion(self):
            return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(traducPyJavaParser.COLON)
            else:
                return self.getToken(traducPyJavaParser.COLON, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(traducPyJavaParser.NEWLINE)
            else:
                return self.getToken(traducPyJavaParser.NEWLINE, i)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.BloqueContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.BloqueContext,i)


        def ELSE(self):
            return self.getToken(traducPyJavaParser.ELSE, 0)

        def getRuleIndex(self):
            return traducPyJavaParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = traducPyJavaParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(traducPyJavaParser.IF)
            self.state = 93
            self.expresion(0)
            self.state = 94
            self.match(traducPyJavaParser.COLON)
            self.state = 95
            self.match(traducPyJavaParser.NEWLINE)
            self.state = 96
            self.bloque()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 97
                self.match(traducPyJavaParser.ELSE)
                self.state = 98
                self.match(traducPyJavaParser.COLON)
                self.state = 99
                self.match(traducPyJavaParser.NEWLINE)
                self.state = 100
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(traducPyJavaParser.WHILE, 0)

        def expresion(self):
            return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,0)


        def COLON(self):
            return self.getToken(traducPyJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(traducPyJavaParser.NEWLINE, 0)

        def bloque(self):
            return self.getTypedRuleContext(traducPyJavaParser.BloqueContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)




    def while_statement(self):

        localctx = traducPyJavaParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(traducPyJavaParser.WHILE)
            self.state = 104
            self.expresion(0)
            self.state = 105
            self.match(traducPyJavaParser.COLON)
            self.state = 106
            self.match(traducPyJavaParser.NEWLINE)
            self.state = 107
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(traducPyJavaParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(traducPyJavaParser.IDENTIFIER, 0)

        def IN(self):
            return self.getToken(traducPyJavaParser.IN, 0)

        def expresion(self):
            return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,0)


        def COLON(self):
            return self.getToken(traducPyJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(traducPyJavaParser.NEWLINE, 0)

        def bloque(self):
            return self.getTypedRuleContext(traducPyJavaParser.BloqueContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_statement" ):
                listener.exitFor_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_statement" ):
                return visitor.visitFor_statement(self)
            else:
                return visitor.visitChildren(self)




    def for_statement(self):

        localctx = traducPyJavaParser.For_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(traducPyJavaParser.FOR)
            self.state = 110
            self.match(traducPyJavaParser.IDENTIFIER)
            self.state = 111
            self.match(traducPyJavaParser.IN)
            self.state = 112
            self.expresion(0)
            self.state = 113
            self.match(traducPyJavaParser.COLON)
            self.state = 114
            self.match(traducPyJavaParser.NEWLINE)
            self.state = 115
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(traducPyJavaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(traducPyJavaParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(traducPyJavaParser.RPAREN, 0)

        def getRuleIndex(self):
            return traducPyJavaParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_statement" ):
                return visitor.visitPrint_statement(self)
            else:
                return visitor.visitChildren(self)




    def print_statement(self):

        localctx = traducPyJavaParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(traducPyJavaParser.PRINT)
            self.state = 118
            self.match(traducPyJavaParser.LPAREN)
            self.state = 119
            self.expresion(0)
            self.state = 120
            self.match(traducPyJavaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(traducPyJavaParser.RETURN, 0)

        def expresion(self):
            return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return traducPyJavaParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_statement" ):
                return visitor.visitReturn_statement(self)
            else:
                return visitor.visitChildren(self)




    def return_statement(self):

        localctx = traducPyJavaParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(traducPyJavaParser.RETURN)
            self.state = 123
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(traducPyJavaParser.NOT, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traducPyJavaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(traducPyJavaParser.ExpresionContext,i)


        def IDENTIFIER(self):
            return self.getToken(traducPyJavaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(traducPyJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(traducPyJavaParser.RPAREN, 0)

        def parametros(self):
            return self.getTypedRuleContext(traducPyJavaParser.ParametrosContext,0)


        def INT(self):
            return self.getToken(traducPyJavaParser.INT, 0)

        def FLOAT(self):
            return self.getToken(traducPyJavaParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(traducPyJavaParser.STRING, 0)

        def PLUS(self):
            return self.getToken(traducPyJavaParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(traducPyJavaParser.MINUS, 0)

        def MULT(self):
            return self.getToken(traducPyJavaParser.MULT, 0)

        def DIV(self):
            return self.getToken(traducPyJavaParser.DIV, 0)

        def MOD(self):
            return self.getToken(traducPyJavaParser.MOD, 0)

        def EQ(self):
            return self.getToken(traducPyJavaParser.EQ, 0)

        def NEQ(self):
            return self.getToken(traducPyJavaParser.NEQ, 0)

        def LT(self):
            return self.getToken(traducPyJavaParser.LT, 0)

        def GT(self):
            return self.getToken(traducPyJavaParser.GT, 0)

        def LEQ(self):
            return self.getToken(traducPyJavaParser.LEQ, 0)

        def GEQ(self):
            return self.getToken(traducPyJavaParser.GEQ, 0)

        def AND(self):
            return self.getToken(traducPyJavaParser.AND, 0)

        def OR(self):
            return self.getToken(traducPyJavaParser.OR, 0)

        def getRuleIndex(self):
            return traducPyJavaParser.RULE_expresion
